Bugzilla bug #26506: getipnodebyname and getipnodebyaddr are thread safe, so no need to lock around them.